# MakeDataCount

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README-ja.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
notebooks/: 01_eda.ipynb  02_word_frequency_analysis.ipynb  03_llm baseline.ipynb  03_temporal_analysis.ipynb  mdc-qwen2-5-postfilter.ipynb  mdc-qwen3.ipynb
src/: check_parse.py  getid.py  helpers.py  llm_validate.py  parse.py  post_filter.py
src/utils/: __init__.py  structure_extraction.py  text_extraction.py  word_scoring.py
