[project]
name = "makedatacount"
version = "0.1.0"
description = "Make Data Count - Finding Data References using Qwen3-0.6B"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "vllm>=0.5.0",
    "pymupdf>=1.23.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "logits-processor-zoo>=0.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
