[project]
name = "makedatacount"
version = "0.1.0"
description = "Make Data Count - Finding Data References using Qwen3-0.6B"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "vllm>=0.5.0",
    "pymupdf>=1.23.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "logits-processor-zoo>=0.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "pydocstyle>=6.3.0",
    "nbqa>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | \.cache
  | data
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["makedatacount"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".cache", "data", "__pycache__"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
exclude = [".venv", ".cache", "data"]

[tool.bandit]
exclude_dirs = [".venv", ".cache", "data", "tests"]
skips = ["B101"]  # Skip assert_used test

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104"]  # Missing docstring in public module/package

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src --cov-report=term-missing"
